k8s.tmpfs1.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: CHESSDB_ADMIN_PASS
              value: your_admin_password
            - name: CHESSDB_ADMIN_USER
              value: chess_admin
            - name: CHESSDB_NAME
              value: CHESS_DB
            - name: CHESSDB_PUBLIC_PASS
              value: your_public_password
            - name: CHESSDB_PUBLIC_USER
              value: chess_public
            - name: MYSQL_ROOT_PASSWORD
              value: your_secure_password
          image: mysql:8.0
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - 127.0.0.1
                - -uroot
                - -p${MYSQL_ROOT_PASSWORD}
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
            - name: init-sql
              mountPath: /etc/mysql/conf.d/my_custom.cnf
              subPath: my_custom.cnf
      volumes:
        - name: init-sql
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: public
  name: public
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: public
  template:
    metadata:
      labels:
        io.kompose.service: public
    spec:
      containers:
        - args:
            - bash
            - -c
            - ' exec /opt/venv/bin/gunicorn -w 2 -b 0.0.0.0:5000 --timeout 600 --log-level debug --access-logfile - --error-logfile - app_public:app '
          image: dpuiu2/chess_web-public:1.0
          name: public
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp
              name: init-files
      volumes:
        - name: init-files
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: public
  name: public
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: public
---
