k8s2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
#  namespace: chess-web
  creationTimestamp: null
spec:
  ingressClassName: nginx
  rules:
#    - host: web.idies.jhu.edu
#    - host: dev.sites.idies.jhu.edu
#    - host: localhost
      http:
        paths:
          - path: /chess_app
            pathType: Prefix
            backend:
              service:
                name: public
                port:
                  number: 80
